    * Makefile: add sloccount target for humans and the sloccount.sc target for
   Jenkins

2014-05-14  Michael R. Crusoe  <mcrusoe@msu.edu>

    * lib/{zlib,bzip2} -> third-party/
    * setup.{cfg,py}: Move third party libraries to their own directory
    * Makefile: add sloccount target for humans and the sloccount.sc target for
   Jenkins

2014-05-13  Michael R. Crusoe  <mcrusoe@msu.edu>

    * doc/release.txt: additional fixes

2014-05-09  Luiz Irber  <irberlui@msu.edu>

    Version 1.0.1

2014-05-09  Michael R. Crusoe  <mcrusoe@msu.edu>

    * doc/release.txt: update release instructions

2014-05-06  Michael R. Crusoe  <mcrusoe@msu.edu>

    * lib/{subset,counting}.cc: fix cppcheck errors; astyle -A10
    --max-code-length=80

2014-05-06  Titus Brown  <titus@idyll.org>

    * sandbox/calc-best-assembly.py: added script to calculate best
    assembly from a list of contig/scaffold files
	
2014-04-23  Titus Brown  <titus@idyll.org>

    * scripts/abundance-dist-single.py: fixed problem where ReadParser was
    being created anew for each thread; regression introduced in 4b823fc.

2014-04-22  Michael R. Crusoe  <mcrusoe@msu.edu>

    *.py: switch to explicit python2 invocation. Fixes #385.

2014-04-21  Titus Brown  <t@idyll.org>

    * doc/development.txt: added spellcheck to review checklist

2014-04-21  Titus Brown  <titus@idyll.org>

    * scripts/normalize-by-median.py: updated FP rate to match latest info from
      Qingpeng's paper; corrected spelling error.

2014-04-21  Michael R. Crusoe  <mcrusoe@msu.edu>

    * setup.py,doc/installing.txt: Remove argparse from the requirements
    unless it isn't available. Argparse is bundled with Python 2.7+. This
    simplifies the installation instructions.

2014-04-17  Ram RS  <ramrs@nyu.edu>

    * scripts/make-initial-stoptags.py: fixed bug that threw error on
     missing .ht input file while actual expected input file is .pt

2014-04-11  Titus Brown  <t@idyll.org>
